# confidence_2026

./: .gitignore  AMSI_vs_Obfuscation.pptx  DEMO_INSTRUCTIONS.md  DEMO_SCREENSHOTS.md  LICENSE  PRESENTATION.md  README.md  SCREENSHOT_SCENARIO.md  add_ml_slide.py  generate_pptx.py  plan.md  reorder_pptx.py  results_test1_amsi_bypass.csv  results_test2_resilience.csv  scan_all.txt  test_matrix.py  todo.md  update_pptx.py
.claude/: settings.json  settings.local.json
PsParser/: AmsiBypassDetector.cs  AstNodes.cs  CSharpDetector.cs  FeatureExtractor.cs  JsonContext.cs  MlScorer.cs  NativeApi.cs  ObfuscationDetector.cs  PSParser.cs  PSParser.csproj  PSTokenizer.cs  Program.cs  README.md  ScanResult.cs  Token.cs
deploy/: build.bat  compare_layers.ps1  diagnose_amsi.ps1  diagnose_layer2.ps1  install.bat  install.ps1  package.bat  reinstall.bat  reinstall.ps1  run_demo.bat  sign_build.ps1  sign_driver.ps1  test_amsi.ps1  test_device_read.ps1  uninstall.bat  uninstall.ps1
ramsi-rs/: Cargo.toml  LICENSE_MIT  Readme.md
ramsi-rs/macros/: Cargo.toml
ramsi-rs/ps-parser-cli/: Cargo.toml
ramsi-rs/ps-parser-cli/src/: deob.rs  detector.rs  keywords.rs  main.rs  patterns.rs
ramsi-rs/ramsi-cli/: Cargo.toml
ramsi-rs/ramsi-cli/src/: com_wrapper.rs  main.rs  pipe_server.rs
ramsi-rs/ramsi-com/: Cargo.toml
ramsi-rs/ramsi-com/src/: amsi_utils.rs  lib.rs  ramsi.rs  winapi.rs
ramsi-rs/ramsi-com/src/amsi_utils/: event.rs  string.rs
ramsi-rs/ramsi-com/src/amsi_utils/event/: process_info.rs
ramsi-rs/ramsi-com/src/ramsi/: antimalware.rs  attribute.rs  keywords.rs  psparser_ffi.rs  report.rs  scan.rs
ramsi-rs/ramsi-com/src/ramsi/report/: pipe_client.rs
ramsi-rs/shared/: Cargo.toml
samples/: INSTRUKCJE_POBIERANIA.md
samples/Obfuscated_Malicious_Powershell/: 12_forcing_error.ps1  13_disable_script_logging.ps1  14_amsi_buffer_path.ps1  16_matt_graebers_autologging_bypass.ps1  18_cornelis_dll_hijack.ps1  19_powershell_2.ps1  20_nishang.ps1  21_adam_chester.ps1  22_modified_amsi_scan_buffer.ps1  26_amsi_provider_disruption.ps1  27_amsi_provider_disruption_evasive.ps1  28_etw_bypass.ps1  45_modern_av.ps1
samples/benign/: AzureAppGWClone.ps1  CallOktaAPI.ps1  ConvertFrom-SourceTable.ps1  DeliveryOptimizationTroubleshooter.ps1  Get-AutopilotDiagnostics.ps1  Get-HardwareDeviceInfo.ps1  Get-IntuneManagementExtensionDiagnostics.ps1  Get-IntuneOffboardingTool.ps1  Get-Sid.ps1  Get-UEFICertificate.ps1  Get-WindowsAutopilotImportGUI.ps1  Install-OpenSSL.ps1  (+24 more)
sysmon-rs/: Cargo.toml
sysmon-rs/common/src/: lib.rs
sysmon-rs/sysmon-km/: build.rs
sysmon-rs/sysmon-km/.cargo/: config.toml
sysmon-rs/sysmon-km/src/: ioctl_code.rs  lib.rs
sysmon-rs/sysmon-um/: Cargo.toml
sysmon-rs/sysmon-um/src/: main.rs
(+264 files in other folders)
