[workspace]
members = [ "sysmon-km",
    "sysmon-um" ,
    "common" ,
    "xtask" ,
]

[workspace.dependencies]
anyhow = "1"

# panic=abort needed by kernel driver (no unwinding in kernel mode).
# sysmon-um (user-mode bin) and common (lib) are unaffected functionally;
# they just can't use catch_unwind, which they don't.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"