[package]
name = "ramsi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
shared = { path = "../shared" }

anyhow = { workspace = true }
log = "0.4.27"
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sysinfo = "0.37.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
env_logger = "0.11.8"
ctrlc = "3.4.7"
windows-core = {workspace = true}

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_Security_Authorization",
]
