[package]
name = "ramsi-com"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
macros = { path = "../macros" }
shared = { path = "../shared" }

cs-parser = { git = "https://github.com/radkum/cs-parser.git" }
winreg = "0.55.0"
windows-core = { workspace = true }
thiserror = { workspace = true }
ps-parser = "1.0.1"
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
sha2 = "0.10.9"
phf = "0.13.1"
log.workspace = true
fern = { version = "0.7.1", features = ["date-based"] }
chrono = "0.4.42"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3"

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Antimalware",
    "Win32_System_Com",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WinRT",
]
